# java-edition

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .mergify.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  THIRD_PARTY.md  build.gradle.kts  dependabot.yml  gradle.properties  hexalite.code-workspace  hexalite.versions.toml  hexalite_cli.sh  origins.versions.toml  rust-tooling.sh  settings.gradle.kts
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml
build-logic/: build.gradle.kts
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: lib.rs  main.rs  options.rs
cli/src/internal/: build.rs  constants.rs  init.rs  mod.rs  run.rs  utils.rs
common/: build.gradle.kts
common-kotlin/: build.gradle.kts  settings.gradle.kts
common-rust/: Cargo.toml  build.rs
common-rust/macros/: Cargo.toml
common-rust/macros/src/: lib.rs
common-rust/src/: dirs.rs  lib.rs  macro.rs  prelude.rs  settings.rs
common-rust/src/definitions/: datatypes.rs  discord.rs  entity.rs  example.rs  mod.rs  rest.rs
common-rust/src/io/: mod.rs
definitions/: SPECIFICATION.md  example.proto  example.yml
definitions-gradle-plugin/: build.gradle.kts  settings.gradle.kts
definitions/rust/: Cargo.toml
definitions/rust/src/: lib.rs  specification.rs
discord/oauth2/: Cargo.toml
discord/oauth2/src/: lib.rs
docker/: docker-compose.yml
docs/: FAQ.md  GETTING_STARTED.md  README.md  SUPPORTING.md  getting_started.md  witchcraft.md
duels/: build.gradle.kts
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
grpc-server/: Cargo.toml  build.rs  prepare_sqlx.sh
grpc-server/bindings/: Cargo.toml  build.rs  cbindgen.toml
grpc-server/bindings/src/: lib.rs  player.rs  runtime.rs  util.rs
grpc-server/cli/: Cargo.toml
grpc-server/cli/src/: main.rs
grpc-server/common/: Cargo.toml
grpc-server/common/src/: lib.rs  macro.rs
grpc-server/common/src/datatype/: mod.rs
grpc-server/prisma/: base.prisma  player.prisma  schema.prisma
grpc-server/prisma/arcade/ffa/entity/: player_stats.prisma
grpc-server/prisma/entity/: player.prisma
grpc-server/sql-macros/: Cargo.toml
grpc-server/sql-macros/src/: data_types.rs  lib.rs
grpc-server/src/: app.rs  codec.rs  lib.rs  macro.rs  main.rs  prisma.rs  utils.rs
grpc-server/src/bootstrap/: logging.rs  mod.rs  postgres.rs  settings.rs
grpc-server/src/datatype/: mod.rs  username.rs
grpc-server/src/definition/: arcade.ffa.entity.rs  arcade.ffa.protocol.rs  datatype.rs  entity.rs  example.rs  mod.rs  protocol.rs  rest.rs  returned.rs
grpc-server/src/definitions/: example.rs  mod.rs  protocol.rs  rest.rs
grpc-server/src/macro/: mod.rs  sql.rs
grpc-server/src/routing/: greeter.rs  mod.rs  player.rs
grpc-server/tests/: common.rs  dummy_player.rs  export_fields.rs  greeter.rs  serialization.rs
installer/: main.py  urls.darwin.json  urls.linux.json  urls.windows.json
jvm-definitions-generator/: Cargo.toml
jvm-definitions-generator/src/: code_generator.rs  config.rs  lib.rs  main.rs
kotlin-grpc-client/: build.gradle.kts
kraken/: build.gradle.kts
kraken-framework/: README.md  build.gradle.kts
licenses/: AGPL-3.0.txt  MIT.txt
native/: build.gradle.kts
resource-pack/: .gitignore  Cargo.toml  README.md  blocks.yml  font.yml  metadata.yml  pack.mcmeta  pack.png.crdownload  zip.sh
resource-pack-src/: build.gradle.kts
resource-pack/assets/minecraft/blockstates/: note_block.json
resource-pack/assets/minecraft/font/: default.json
resource-pack/assets/minecraft/models/block/: placeholder.json
resource-pack/assets/minecraft/models/item/: paper.json
resource-pack/lang/: en_us.json
resource-pack/src/: config.rs  data.rs  lib.rs  main.rs  utils.rs
rest-webserver/: Cargo.toml  build.gradle.kts  build.rs
rest-webserver/.cargo/: config.toml
rest-webserver/common/: Cargo.toml
rest-webserver/common/src/: crud.rs  lib.rs  prelude.rs
rest-webserver/proc-macros/: Cargo.toml
rest-webserver/src/: lib.rs  main.rs
rest-webserver/src/api/: mod.rs
rest-webserver/src/api/v1/: mod.rs
rest-webserver/src/api/v1/player/: dto.rs  entity.rs  mod.rs
rest-webserver/src/app/: mod.rs  state.rs
rest-webserver/src/bootstrap/: database.rs  logger.rs  mod.rs  postgres.rs  rabbitmq.rs  redis.rs  server.rs  settings.rs
rest-webserver/src/cmdline/: mod.rs
rest-webserver/src/config/: mod.rs
rest-webserver/src/definitions/: datatype.rs  entity.rs  enumeration.rs  mod.rs  protocol.rs  rest.rs  returned.rs
rest-webserver/src/entity/: base.rs  mod.rs  player.rs  role.rs
rest-webserver/src/io/: reader.rs  writer.rs
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/: webserver.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/annotations/: RouteSignature.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/api/v1/: role.kt  users.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/db/: exposed.kt  pooling.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/db/entity/: Role.kt  User.kt  UserRole.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/db/table/: Roles.kt  UserRoles.kt  Users.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/generic/: GenericReply.kt
rest-webserver/src/main/kotlin/org/hexalite/network/rest/webserver/util/: api.kt
rest-webserver/src/middleware/: authentication.rs  mod.rs
rest-webserver/src/settings/: mod.rs
rest-webserver/src/util/: authorization.rs  either.rs  error.rs  mod.rs  sea.rs
run/: start  (+10 more)
voxeru-discord-bot/: Cargo.toml  rustfmt.toml  settings.southdust.json
voxeru-discord-bot/.cargo/: config.toml
voxeru-discord-bot/assets/headers/: guidelines.aseprite  introduction.aseprite
voxeru-discord-bot/i18n/: english.json  german.json  portuguese.json  spanish.json
voxeru-discord-bot/src/: config.rs  git.rs  main.rs  typealias.rs
voxeru-discord-bot/src/command/: mod.rs  support.rs
voxeru-discord-bot/src/discord/: event_handler.rs  macros.rs  messages.rs  mod.rs  util.rs  welcome_screen.rs
(+376 files in other folders)
