[workspace]
resolver = "2"
members = [
    "common-rust",
    "common-rust/macros",
    "cli",
    "resource-pack",
    "grpc-server",
    "grpc-server/bindings",
    "grpc-server/cli",
    #"rest-webserver",
    "rust-tools/lint",
    "jvm-definitions-generator",
    "discord/oauth2"
]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
