[package]
name = "hexalite"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.17", features = ["full"] }
symlink = { git = "https://gitlab.com/chris-morgan/symlink" }
clap = { version = "^3.1", features = ["derive"] }
lazy_static = "^1"
home = "^0"
hexalite_common = { path = "../common-rust" }