[package]
name = "hexalite-common"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["example"]
example = []
entity = []
rest = []
protocol = []

[dependencies]
tokio = { version = "^1.18", features = ["full"] }
futures = "^0.3"
home = "^0"
lazy_static = "^1"
prost = { git = "https://github.com/eexsty/prost", branch = "no-message-trait", features = ["prost-derive"] }
bytes = "^1.1"
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }

[build-dependencies]
prost-build = { git = "https://github.com/eexsty/prost", branch = "no-message-trait" }
glob = "^0"
