[package]
name = "hexalite-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.18", features = ["full"] }
futures = "^0.3"
home = "^0"
lazy_static = "^1"

anyhow = "^1.0"
async-trait = "^0.1"
