[package]
name = "hexalite-common"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["./", "macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-macros = { path = "./macros" }
home = "^0"
lazy_static = "^1"
anyhow = "^1.0"
serde = { version = "^1", features = ["derive"] }
serde_with = { version = "^1.13", features = ["chrono"] }
toml = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
