[package]
name = "grpc-server"
publish = false
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexalite-common = { path = "../common-rust" }
tonic = { version = "^0.7", features = ["tls", "compression"] }
uuid = { version = "^1", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
log = { version = "^0.4", optional = true }
env_logger = { version = "^0.9", optional = true }
bytes = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1.18", features = ["full"] }
lapin = { version = "^2.1", optional = true }
toml = { version = "^0.5", optional = true }
anyhow = "^1.0"
async-trait = { version = "^0.1", optional = true }
cbor4ii = { version = "^0.2", features = ["serde1", "use_std"] }
prost = { git = "https://github.com/eexsty/prost", branch = "no-message-trait" }
rustls = { version = "^0.20", optional = true }
phf = { version = "^0.10", features = ["macros"] }
lazy_static = { version = "^1.4.0", optional = true }
heck = { version = "^0.4", optional = true }
image = { version = "^0.24", optional = true }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2", optional = true }
terminal-spinners = { version = "^0.3", optional = true }

[build-dependencies]
hexalite-common = { path = "../common-rust" }
prost-build = { git = "https://github.com/eexsty/prost", branch = "no-message-trait" }
syn = "^1"
prettyplease = "^0.1"
glob = "^0"
heck = "^0.4"

[features]
default = ["server"]
server = [
  "log",
  "env_logger",
  "lapin",
  "toml",
  "async-trait",
  "rustls",
  "lazy_static",
  "heck",
  "prisma-client-rust",
  "image",
  "terminal-spinners"
]
client = []
