[package]
name = "jvm-definitions-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "^0.10"
prost-types = "^0.11.9"
tempfile = "^3"
anyhow = "^1"
xshell = "^0.2"
heck = "^0.4"
itertools = "^0.10"
glob = "^0"
multimap = { version = "^0.8", default-features = false }
hexalite-common = { path = "../common-rust" }