[package]
name = "resource-pack"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.8"
hexalite-common = { path = "../common-rust" }