[package]
name = "webserver"
publish = false
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "^0.6"
actix-identity = "^0.4"
hexalite-common = { path = "../common-rust" }
sea-query = { version = "^0", default-features = false, features = [
    "derive",
    "attr",
    "thread-safe",
    "backend-postgres",
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-postgres",
    "postgres",
    "postgres-json",
    "postgres-chrono",
    "postgres-uuid",
    "postgres-array",
], git = "https://github.com/eexsty/sea-query" }
sqlx = { version = "^0", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "chrono",
    "decimal",
    "uuid",
    "json",
    "postgres",
    "tls",
] }
uuid = { version = "^0", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"
fast_log = "^1.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = "^1.18"
lapin = "^2.1"
redis = "^0.21"
jsonwebtoken = "^8.1"
toml = "^0.5"
lazy_static = "^1.4"
futures-util = "^0.3"
anyhow = "^1.0"
async-trait = "^0.1"
prost = { git = "https://github.com/eexsty/prost", branch = "no-message-trait", features = [
    "prost-derive",
] } 

[build-dependencies]
prost-build = { git = "https://github.com/eexsty/prost", branch = "no-message-trait" }
glob = "^0"