[package]
name = "webserver"
publish = false
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4", features = ["rustls"] }
actix-cors = "^0.6"
actix-identity = "^0.5.2"
hexalite-common = { path = "../common-rust" }
sea-query = { version = "^0", default-features = false, features = [
    "derive",
    "attr",
    "thread-safe",
    "backend-postgres",
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-postgres",
    "postgres",
    "postgres-json",
    "postgres-chrono",
    "postgres-uuid",
    "postgres-array",
], git = "https://github.com/SeaQL/sea-query" }
bb8-postgres = { version = "^0.8", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-0_8",
] }
tokio-postgres = { version = "^0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-0_8",
] }
uuid = { version = "^0", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
log = "^0.4"
env_logger = "^0.9"
serde = { version = "^1", features = ["derive"] }
serde_with = { version = "^1.13", features = ["chrono", "json"] }
serde_json = "^1"
tokio = "^1.18"
lapin = "^2.1"
redis = { version = "^0.21", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "aio",
] }
jsonwebtoken = "^8.1"
toml = "^0.5"
lazy_static = "^1.4"
futures-util = "^0.3"
anyhow = "^1.0"
async-trait = "^0.1"
prost = { git = "https://github.com/eexsty/prost", branch = "no-message-trait", features = [
    "prost-derive",
] }

[build-dependencies]
prost-build = { git = "https://github.com/eexsty/prost", branch = "no-message-trait" }
glob = "^0"
