[package]
name = "voxeru"
version = "0.1.0"
edition = "2021"
authors = ["Pedro <you@axyria.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
anyhow = "1.0"
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "1.29", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
structstruck = "0.4"
regex = "1.9"
reqwest = "0.11"
log = "0.4"
env_logger = "0.10"
paste = "1.0"