[package]
name = "definitions-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "^1"
quote = "^1"
serde = { version = "^1", features = ["derive"] }
serde_yaml = "^0.8"
home = "^0"