[package]
name = "dicord-oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.18", features = ["full"] }
futures = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = { version = "^0.4", features  = ["serde"] }
reqwest = { version = "^0.11", features = ["json"] }