[package]
name = "grpc-server-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexalite-common = { path = "../../common-rust" }
grpc-server = { path = "../", default-features = false, features = ["client"] }
