[package]
name = "grpc-server-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexalite-common = { path = "../../common-rust" }
grpc-server = { path = "../", default-features = false, features = ["client"] }
tonic = { version = "^0.7", features = ["tls", "compression"] }
uuid = "^1.0"
libc = "^0.2"
cbor4ii = { version = "^0.2", features = ["serde1", "use_std"] }
futures = "^0.3"

[build-dependencies]
cbindgen = "^0.23"
