[package]
name = "grpc-server-bindings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "grpc_server_bindings"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexalite-common = { path = "../../common-rust" }
grpc-server = { path = "..", default-features = false, features = ["client"] }
tonic = { version = "^0.7", features = ["tls", "compression"] }
uuid = "^1.0"
libc = "^0.2"
tokio = "^1.18"
lazy_static = "^1.4"
serde = "^1"
hex = "^0.4"

[build-dependencies]
cbindgen = "^0.23"
