[package]
name = "grpc-server-sql-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "^1"
quote = "^1"
uuid = "^1"
chrono = "^0.4"
serde_json = "^1"
grpc-server-common = { path = "../common" }