[package]
name = "webserver-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0"
sqlx = { version = "^0", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "chrono",
    "decimal",
    "uuid",
    "json",
    "postgres",
    "tls",
] }